# wincut

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: alloc.h  bytesize.h  chunk.h  config.h  const.h  dconfig.h  debug.h  dedupe.h  defines.h  error.h  file.h  getopt.h  hash.h  hmap.h  line.h  meminfo.h  memstate.h  mkstemp.h  mmap.h  optparse.h  status.h  stdalign.h  thpool.h  uinput.h  xxhash.h
lib/: libpthreadVC3.lib  mimalloc.lib
src/: bytesize.c  chunk.c  dconfig.c  dedupe.c  error.c  file.c  getopt.c  hmap.c  line.c  main.c  meminfo.c  memstate.c  mkstemp.c  mmap.c  optparse.c  status.c  thpool.c  uinput.c
